# MexForge

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  toolbox.prj
.github/workflows/: ci.yml
examples/simple_math/: CMakeLists.txt  bindings.cpp  make.m  math_lib.hpp
examples/simple_math/matlab/: demo_dynamic.m  test_e2e.m
examples/simple_math/matlab/+math/: calculator.m
include/mexforge/: mexforge.hpp
include/mexforge/core/: gateway.hpp  logger.hpp  marshaller.hpp  method_traits.hpp  object_store.hpp  registry.hpp  runner.hpp  types.hpp
matlab/+mexforge/: MexObject.m  generate_signatures.m
resources/project/3_ot8vsLwUH2ZNHz32jBtqd4LY0/: LeVcB4ktb6nvnwIW1MKsfF2uQlUp.xml  zcm6p2aotgq3UQStHU502CmUYisp.xml
resources/project/3t6ep3eVFCUnOZ5Lx6Jzv6EoODQ/: hJTsXfzSMbdNr2Zd-ipIKTAasl4p.xml
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: -GQH0W3jR1nkOJryFDlKumRdO_sp.xml  B9Va6mbSC1iq4uoPZD3TvDf6FIYp.xml  BdHPOrG4ZV9AarW35ldv6S9Pz04p.xml  h9RSN12XSJ4HYySyU9WRobWyxgYd.xml  h9RSN12XSJ4HYySyU9WRobWyxgYp.xml  yHNaRJCynvVMST1-D1gg_XJupv8d.xml  yHNaRJCynvVMST1-D1gg_XJupv8p.xml  yaMcgPgpzXQFZZrWUjRv4QRM4FMp.xml
resources/project/EcSAxkJ5_m6DlB7BZMLgFgiCyow/: 2L5WS9AKG7vOvfD1bUFeEKjvzO4p.xml  TPMwLPoxeM0A1nHl638MlmNR8ssp.xml  vPKjYZoc3gocgi7adUuUoxlc_ZIp.xml
test/: test_gateway.cpp  test_logger.cpp  test_marshaller.cpp  test_method_traits.cpp  test_object_store.cpp  test_registry.cpp  test_runner.cpp  test_types.cpp
test/mock_matlab/: MatlabDataArray.hpp  mex.hpp  mexAdapter.hpp
(+44 files in other folders)
